--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,26 @@
 name: 'WeThinkCode_ Send Twist Webooks'
 description: 'Call Twist Webhooks'
+inputs:
+    install-id: 
+      description: 'The Twist Webhooks Install ID'
+      required: true
+    install-token:
+        description: 'The Twist Webhooks Install Token'
+        required: true
+    title:
+        description: 'The title of the notification'
+        required: true
+    content:
+        description: 'The content of the notification'
+        required: true
 branding:
     icon: 'wtc-logo.svg'
     color: 'blue'
+runs:
+  using: 'docker'
+  image: 'Dockerfile'
+  args:
+    - ${{ inputs.install-id }}  
+    - ${{ inputs.install-token }}  
+    - ${{ inputs.title }}  
+    - ${{ inputs.content }}  
